--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,6 +9,7 @@
           <div class="breadcrumbs">
             <p class="mb-0 text-white"><%= link_to 'Главная', root_path %>  /
               <%= link_to 'Доставка', delivery_path %>  /
+              <%= link_to 'Оплата', payment_path %>  /
               <%= link_to 'О нас', about_path %>  /  <span class="text-success">About</span></p>
           </div>
         </div>
