--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -3,40 +3,18 @@
 
 <p id="notice"><%= notice %></p>
 
-<h1>Stuffs</h1>
-
-<table>
-  <thead>
-  <tr>
-    <th>Title</th>
-    <th>Price</th>
-    <th>Short description</th>
-    <th>Full description</th>
-    <th>Preview image</th>
-    <th>In stock</th>
-    <th>Slug</th>
-    <th colspan="3"></th>
-  </tr>
-  </thead>
-
-  <tbody>
+<div class="container">
+  <div class="row">
   <% @stuffs.each do |stuff| %>
-    <tr>
-      <td><%= stuff.title %></td>
-      <td><%= stuff.price %></td>
-      <td><%= stuff.short_description %></td>
-      <td><%= stuff.full_description %></td>
-      <td><%= stuff.preview_image %></td>
-      <td><%= stuff.in_stock %></td>
-      <td><%= stuff.slug %></td>
-      <td><%= link_to 'Show', stuff %></td>
-      <td><%= link_to 'Edit', edit_stuff_path(stuff) %></td>
-      <td><%= link_to 'Destroy', stuff, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-    </tr>
+    <div class="card" style="width: 18rem;">
+      <img class="card-img-top" src=".../100px180/" alt="Card image cap">
+      <div class="card-body">
+        <h5 class="card-title"><%= stuff.title %></h5>
+        <p class="card-text"><%= stuff.short_description %></p>
+        <p class="card-text"><%= stuff.price %></p>
+        <%= link_to 'Подробнее', stuff %>
+      </div>
+    </div>
   <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Stuff', new_stuff_path %>
+</div>
+</div>
