--- a/app/views/stuffs/index.html.erb
+++ b/app/views/stuffs/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Stuffs</h1>
 
-<table>
+<table class="table table-striped table-dark">
   <thead>
     <tr>
       <th>Title</th>
@@ -16,7 +16,7 @@
     </tr>
   </thead>
 
-  <tbody>
+  <tbody class="">
     <% @stuffs.each do |stuff| %>
       <tr>
         <td><%= stuff.title %></td>
