--- a/app/views/stuffs/_form.html.erb
+++ b/app/views/stuffs/_form.html.erb
@@ -33,7 +33,7 @@
 
   <div class="field">
     <%= form.label :preview_image %>
-    <%= form.number_field :preview_image %>
+    <%= form.text_field :preview_image %>
   </div>
 
   <div class="field">
