header green links added

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -34,6 +34,12 @@
   color: whitesmoke;
 }
 
+.mb-0{
+  font-family: UbuntuMono-Regular;
+  font-size: 20px;
+  color: whitesmoke;
+}
+
 .sticky {
   background: #343a40;
 }
