--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,19 +7,19 @@
 
       <div class="sticky col-md-12">
           <div class="breadcrumbs text-center">
-            <p class="mb-0 link">
+            <p class="mb-0">
               PC:~$
               <%= link_to 'Главная', root_path, { class: 'link' } %>  /
               <%= link_to 'Доставка', delivery_path, { class: 'link' } %>  /
               <%= link_to 'Оплата', payment_path, { class: 'link' } %>  /
               <%= link_to 'О нас', about_path, { class: 'link' } %>  /
-              <%= link_to 'Корзина', stuffs_path, { class: 'link' } %>(0)
-              <span class="text-success">test</span></p>
+              <%= link_to "Корзина#{'(0)'}", stuffs_path, { class: 'link' } %>
+              <!--span class="text-success">test</span></p-->
           </div>
         </div>
       </div>
 
-      <div class="col-4 text-left link">
+      <div class="col-4 text-left mb-0">
         <p>Телефон: +380631234578<br>
         Email: my_shop@example.com</p>
         <form id="search" class="form-inline my-2 my-lg-0">
