--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -24,8 +24,8 @@
         Email: my_shop@example.com</p>
         <form id="search" class="form-inline my-2 my-lg-0">
           <input type="text" id="search-field" placeholder="search" class="form-control">
-          <p>&nbsp</p>
-          <button class="btn btn-dark">Найти</button>
+          <!--p>&nbsp</p-->
+          <button class="btn btn-dark" type="submit" id="submit">Найти</button>
         </form>
       </div>
 
