--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,15 +4,18 @@
 <div class="container">
   <div class="row">
   <% @stuffs.each do |stuff| %>
-    <div class="card" style="width: 18rem;">
-      <div align="center">
-        <%= link_to image_tag(stuff.preview_image, width: 250), stuff %>
-      </div>
-      <div class="card-body">
-        <h5 class="card-title"><%= stuff.title %></h5>
-        <p class="card-text"><%= stuff.short_description %></p>
-        <p class="card-text"><%= stuff.price %> UAH</p>
-      </div>
+      <div class="col-4">
+        <div class="card" style="width: 18rem;">
+          <div align="center">
+              <%= link_to image_tag(stuff.preview_image, width: 250), stuff %>
+          </div>
+        <div class="card-body">
+            <h5 class="card-title"><%= stuff.title %></h5>
+            <p class="card-text"><%= stuff.short_description %></p>
+            <p class="card-text"><%= stuff.price %> UAH</p>
+        </div>
+        </div>
+        <p>&nbsp</p>
     </div>
   <% end %>
 </div>
