--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -21,7 +21,7 @@
 
       <div class="col-4 text-left mb-0">
         <p>Телефон: +380631234578<br>
-        Email: my_shop@example.com</p>
+        Email: <span id="mail"></span></p>
         <form id="search" class="form-inline my-2 my-lg-0">
           <input type="text" id="search-field" placeholder="search" class="form-control">
           <!--p>&nbsp</p-->
