--- a/app/views/stuffs/_form.html.erb
+++ b/app/views/stuffs/_form.html.erb
@@ -27,6 +27,11 @@
     <%= form.text_field :price, { :class => 'form-control' } %>
   </div>
 
+    <div class="field">
+      <%= form.label :old_price %>
+      <%= form.text_field :old_price, { :class => 'form-control' } %>
+    </div>
+
   <div class="field">
     <%= form.label :short_description %>
     <%= form.text_area :short_description, { :class => 'form-control' } %>
