short_description symbol counter added

--- a/app/views/stuffs/_form.html.erb
+++ b/app/views/stuffs/_form.html.erb
@@ -32,9 +32,10 @@
       <%= form.text_field :old_price, { :class => 'form-control' } %>
     </div>
 
-  <div class="field">
+  <div class="field" >
     <%= form.label :short_description %>
-    <%= form.text_area :short_description, { :class => 'form-control' } %>
+    <small>max len is 120. left: <span id="inputted"></span></small>
+    <%= form.text_area :short_description, { :class => 'form-control', :id => 'short-description' } %>
   </div>
 
   <div class="field">
