--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -23,6 +23,7 @@
         <p>Телефон: +380631234578<br>
         Email: <span id="mail"></span></p>
         <form id="search" class="form-inline my-2 my-lg-0">
+        <span id=<% @list %>></span>
           <input type="text" id="search-field" placeholder="search" class="form-control">
           <!--p>&nbsp</p-->
           <button class="btn btn-dark" type="submit" id="submit">Найти</button>
