--- a/app/views/stuffs/index.html.erb
+++ b/app/views/stuffs/index.html.erb
@@ -1,36 +1,53 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Stuffs</h1>
+<nav>
+  <div class="nav nav-tabs" id="nav-tab" role="tablist">
+    <a class="nav-item nav-link active" id="nav-stuff-tab" data-toggle="tab" href="#nav-stuff" role="tab" aria-controls="nav-stuff" aria-selected="true"><h5 class="h">stuff</h5></a>
+    <a class="nav-item nav-link" id="nav-categories-tab" data-toggle="tab" href="#nav-categories" role="tab" aria-controls="nav-categories" aria-selected="false"><h5 class="h">categories</h5></a>
+    <a class="nav-item nav-link" id="nav-settings-tab" data-toggle="tab" href="#nav-settings" role="tab" aria-controls="nav-settings" aria-selected="false"><h5 class="h">settings</h5></a>
+  </div>
+</nav>
 
-<table class="table table-striped table-dark">
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Price</th>
-      <th>Short description</th>
-      <th>Preview image</th>
-      <th>In stock</th>
-      <th>Slug</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div class="tab-content" id="nav-tabContent">
 
-  <tbody class="">
-    <% @stuffs.each do |stuff| %>
+  <div class="tab-pane fade show active" id="nav-stuff" role="tabpanel" aria-labelledby="nav-stuff-tab">
+    <br>
+    <table class="table table-striped">
+      <thead>
       <tr>
-        <td><%= stuff.title %></td>
-        <td><%= stuff.price %></td>
-        <td><%= stuff.short_description %></td>
-        <td><%= stuff.preview_image %></td>
-        <td><%= stuff.in_stock %></td>
-        <td><%= stuff.slug %></td>
-        <td><%= link_to 'Show', stuff %></td>
-        <td><%= link_to 'Edit', edit_stuff_path(stuff) %></td>
-        <td><%= link_to 'Destroy', stuff, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Title</th>
+        <th>Price</th>
+        <th>Short description</th>
+        <th>In stock</th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
-<hr>
+      </thead>
 
-<%= link_to 'Add New Stuff', new_stuff_path %>
+      <tbody class="">
+      <% @stuffs.each do |stuff| %>
+        <tr>
+          <td><%= stuff.title %></td>
+          <td><%= stuff.price %></td>
+          <td><%= stuff.short_description %></td>
+          <td><%= stuff.in_stock %></td>
+          <td><%= link_to 'Show', stuff %></td>
+          <td><%= link_to 'Edit', edit_stuff_path(stuff) %></td>
+          <td><%= link_to 'Destroy', stuff, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+      </tbody>
+    </table>
+    <hr>
+
+    <%= link_to 'Add New Stuff', new_stuff_path %>
+  </div>
+
+  <div class="tab-pane fade" id="nav-categories" role="tabpanel" aria-labelledby="nav-categories-tab">
+    <%= render 'categories/index' %>
+  </div>
+
+  <div class="tab-pane fade" id="nav-settings" role="tabpanel" aria-labelledby="nav-settings-tab">
+    here lies settings of myShop...
+  </div>
+
+</div>
