auto-input of tag-field added

--- a/app/views/stuffs/show.html.erb
+++ b/app/views/stuffs/show.html.erb
@@ -19,11 +19,11 @@
     <% end %>
     <p><%= @stuff.full_description %></p>
     <p><%= @stuff.tag_list %></p>
-    <% if http_basic_authenticate_with %>
+   <div hidden>
       <hr>
       <%= link_to 'Edit', edit_stuff_path(@stuff) %> |
       <%= link_to 'Back', stuffs_path %>
-    <% end %>
+  </div>
   </div>
 </div>
 
