fix / easyAutocomplete added

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -24,7 +24,7 @@
         Email: <span id="mail"></span></p>
         <form id="search" class="form-inline my-2 my-lg-0">
         <span id=<% @list %>></span>
-          <input type="text" id="search-field" placeholder="search" class="form-control">
+          <input type="text" id="searchField" placeholder="search" class="form-control">
           <!--p>&nbsp</p-->
           <button class="btn btn-dark" type="submit" id="submit">Найти</button>
         </form>
