--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -51,10 +51,22 @@
   color: green;
 }
 
+.price-small {
+  font-family: UbuntuMono-Bold;
+  font-size: 20px;
+  color: green;
+}
+
 .discount{
   font-family: UbuntuMono-Bold;
   text-decoration: line-through;
   font-size: 30px;
+}
+
+.discount-small{
+  font-family: UbuntuMono-Bold;
+  text-decoration: line-through;
+  font-size: 15px;
 }
 
 .in-stock{
@@ -75,7 +87,7 @@
   color: #343a40;
 }
 
-#search-field{
+#searchField{
   background-color: #343a40;
   color: green;
   border-radius: 10px;
