--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -23,10 +23,10 @@
         <p>Телефон: +380631234578<br>
         Email: <span id="mail"></span></p>
         <form id="search" class="form-inline my-2 my-lg-0">
-        <span id=<% @list %>></span>
-          <input type="text" id="searchField" placeholder="search" class="form-control">
-          <!--p>&nbsp</p-->
+          <div class="row">
+          <input type="text" id="searchField" placeholder="search" class="form-control" autocomplete="on">
           <button class="btn btn-dark" type="submit" id="submit">Найти</button>
+          </div>
         </form>
       </div>
 
