--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,7 +13,8 @@
               <%= link_to 'Доставка', delivery_path, { class: 'link' } %>  /
               <%= link_to 'Оплата', payment_path, { class: 'link' } %>  /
               <%= link_to 'О нас', about_path, { class: 'link' } %>  /
-              <%= link_to "Корзина#{'(0)'}", stuffs_path, { class: 'link' } %>
+              <%= link_to "Корзина#{'(0)'}", stuffs_path, { class: 'link' } %>  /
+              <%= link_to "Admin", adnim_path, { class: 'link' } %>
               <!--span class="text-success">test</span></p-->
           </div>
         </div>
