--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -107,3 +107,10 @@
   position: fixed;
   top:0; left:0;
   width: 100%; }
+
+.comment{
+  font-family: UbuntuMono-Regular;
+  border: #343a40 solid;
+  border-radius: 10px;
+
+}
