--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -23,11 +23,8 @@
       <div class="col-4 text-left mb-0">
         <p>Телефон: +380631234578<br>
         Email: <span id="mail"></span></p>
-        <form id="search" class="form-inline my-2 my-lg-0">
-          <div class="row">
-          <input type="text" id="searchField" placeholder="search" class="form-control" autocomplete="on">
-          <button class="btn btn-dark" type="submit" id="submit">Найти</button>
-          </div>
+        <form id="search" class="col-10">
+            <input type="text" id="searchField" placeholder="search" class="form-control" autocomplete="on">
         </form>
       </div>
 
