--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -112,5 +112,9 @@
   font-family: UbuntuMono-Regular;
   border: #343a40 solid;
   border-radius: 10px;
+}
 
+#sitefooter {
+  background:#343a40;
+  color: whitesmoke;
 }
