--- a/app/views/stuffs/show.html.erb
+++ b/app/views/stuffs/show.html.erb
@@ -54,5 +54,5 @@
     <% end %>
 </div>
 <div class="container">
-  <%= render 'stuffs/comment_form', comment: @comment %>
+  <%= render 'stuffs/comment_form' %>
 </div>
