--- a/app/views/comments/_comment_form.html.erb
+++ b/app/views/comments/_comment_form.html.erb
@@ -2,7 +2,7 @@
 <div class="col-6 comment">
   <h5>PC:~$ form</h5>
   <hr class="comment">
-  <%= form_with(url: comments_path, method: 'post', remote: true) do |form| %>
+  <%= form_for @comment, remote: true do |form| %>
     <div class="field">
       <%= form.label :username %>
       <%= form.text_field :username, { :class => 'form-control' } %>
@@ -24,10 +24,10 @@
     </div>
 
     <div>
-      <%= form.hidden_field(:stuff_id, :value => @stuff.id )%>
+      <%= form.hidden_field(:stuff_id, :value => session[:stuff_id] )%>
       <%= form.hidden_field(:status, :value => 'false' )%>
     </div>
     <p></p>
-    <div class="actions"><%= form.submit('Оставить отзыв', { :class => 'btn btn-link link-side'}) %></div>
+    <div class="actions"><%= form.submit('Оставить отзыв', { :class => 'btn btn-link link-side' } ) %></div>
   <% end %>
 </div>
