--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -23,9 +23,7 @@
       <div class="col-4 text-left mb-0">
         <p>Телефон: +380631234578<br>
         Email: <span id="mail"></span></p>
-        <form id="search" class="col-10">
-            <input type="text" id="searchField" placeholder="search" class="form-control" autocomplete="on">
-        </form>
+        <%= render 'search/form' %>
       </div>
 
     </div>
