--- a/app/views/search/results.html.erb
+++ b/app/views/search/results.html.erb
@@ -1,23 +1,41 @@
 
-<p>label test</p>
-<p>
-
-</p>
-
 <div class="container">
+  <p></p>
   <% if @res %>
-    <h3>Search results: <%= @res.length %></h3>
-    <% @res.reverse_each do |stuff| %>
-      <div class="card">
-        <h2 class="card-title"><%= link_to stuff.title, stuff_path(stuff) %></h2>
-        <div class="card-body">
+    <h3 class="h">Search results for <%= @input %>: <%= @res.length %></h3>
+
+    <div class="row">
+      <% @res.each do |stuff| %>
+        <div class="col-4">
+          <p></p>
+          <div class="card" id="card" style="width: 18rem;">
+            <div align="center">
+              <p></p>
+              <%= link_to image_tag(stuff.preview_image, width: 250), stuff %>
+            </div>
+
+            <div class="card-body">
+              <h5 class="card-title"><%= stuff.title %></h5>
+
+              <div id="description" style="display: none;">
+                <%= stuff.short_description %>
+              </div>
+
+              <div class="card-text">
+                <% if stuff.old_price %>
+                  <span class="discount-small text-muted"><%= stuff.old_price %> UAH</span>
+                <% end %>
+                <span class="price-small">   <%= stuff.price %> UAH</span>
+              </div>
+            </div>
+          </div>
         </div>
-      </div>
-    <% end %>
+      <% end %>
+    </div>
+
   <% else %>
-    <div class="alert-notice">
+    <div class="h">
       <p>No results found</p>
     </div>
   <% end %>
 </div>
-
