--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -16,7 +16,6 @@
   <h4 class="h">Фильтр:</h4>
   <hr>
 </div>
-
 <!-- Stuff id: 1,
 title: "Ubuntu",
 price: 0.9999e2,
@@ -29,3 +28,14 @@ created_at: "2019-01-04 21:56:27",
 updated_at: "2019-01-04 21:56:27",
 category_id: nil,
 tag_list: nil> -->
+<div class="container text-center">
+<h4 class="h">Тэги:</h4>
+<hr>
+<% if tags %>
+  <% tags.each do |list| %>
+    <%= link_to list, tagged_path(tag: list), { class: 'link-side'} %><br>
+  <% end %>
+<% else %>
+  <p> No tags Yet..</p>
+<% end %>
+</div>
